; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_7zip.c_free_decompression.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_7zip.c_free_decompression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*)* }
%struct.archive_read = type { i32 }
%struct._7zip = type { i64, i32, i64, i32, i64, i32, i32, i64 }

@ARCHIVE_OK = common dso_local global i32 0, align 4
@__archive_ppmd7_functions = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@ARCHIVE_ERRNO_MISC = common dso_local global i32 0, align 4
@ARCHIVE_FATAL = common dso_local global i32 0, align 4
@BZ_OK = common dso_local global i64 0, align 8
@Z_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive_read*, %struct._7zip*)* @free_decompression to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @free_decompression(%struct.archive_read* %0, %struct._7zip* %1) #0 {
  %3 = alloca %struct.archive_read*, align 8
  %4 = alloca %struct._7zip*, align 8
  %5 = alloca i32, align 4
  store %struct.archive_read* %0, %struct.archive_read** %3, align 8
  store %struct._7zip* %1, %struct._7zip** %4, align 8
  %6 = load i32, i32* @ARCHIVE_OK, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.archive_read*, %struct.archive_read** %3, align 8
  %8 = load %struct._7zip*, %struct._7zip** %4, align 8
  %9 = getelementptr inbounds %struct._7zip, %struct._7zip* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load i32 (i32*)*, i32 (i32*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__archive_ppmd7_functions, i32 0, i32 0), align 8
  %14 = load %struct._7zip*, %struct._7zip** %4, align 8
  %15 = getelementptr inbounds %struct._7zip, %struct._7zip* %14, i32 0, i32 1
  %16 = call i32 %13(i32* %15)
  %17 = load %struct._7zip*, %struct._7zip** %4, align 8
  %18 = getelementptr inbounds %struct._7zip, %struct._7zip* %17, i32 0, i32 0
  store i64 0, i64* %18, align 8
  br label %19

19:                                               ; preds = %12, %2
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
